@@ -28,7 +28,7 @@
 - If nano opens a read-only file with the --tempfile option, and a change
   is made to the buffer, and a write is attempted, nano will not give you
   a dialog about not being able to write the file, and it will not let the
-  user exit (29, discovered by Joshua Jensen) [FIXED mostly]
+  user exit (29, discovered by Joshua Jensen) [FIXED]
 
 ** Open BUGS **
 
